[package]
name = "mirror-auth"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21" }
mirror-error = { git = "https://github.com/lmzuccarelli/rust-mirror-error", branch = "main", version = "0.1.0" }
urlencoding = "2.1.3"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
reqwest = { version = "0.11.22", features = ["json"] }
async-trait = "0.1.74"
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
serial_test = "2.0.0"
tokio-test = "0.4.3"
mockito = "1.2.0"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }


[lib]
name = "mirror_auth"
path = "src/lib.rs"
